# garlic

./: .gitignore  CMakeLists.txt  README.md  README.rst
example/: config  config.ini  test.sh
src/: CMakeLists.txt  cron.cpp  cron.hpp  garlic.cpp  ini.cpp  inireader.cpp  inireader.h  inireader.hpp  ppepper.cpp  server.cpp  server.h  server.hpp  test.cpp  test.h  test.hpp  utils.cpp  utils.h
src/static/: garlic.css  garlic.js
src/templates/: CMakeLists.txt  base.html  index.html  login.html  style.css
tests/: 01-compile.sh  all.sh  garlic.ini
underscore/.kdev4/: underscore.kdev4
