cmake_minimum_required (VERSION 2.8)
cmake_policy(VERSION 2.8)
project(ppepper)
find_library(ONIONCPP_LIB NAMES onioncpp PATH ${LIBPATH})
SET(OTEMPLATE otemplate)
SET(CMAKE_CXX_FLAGS "-Wall -Werror -O2 --std=c++11 -D__DEBUG__")

IF (${CMAKE_BUILD_TYPE} MATCHES "Debug")
	add_definitions(-D__DEBUG__)
	SET(CMAKE_C_FLAGS "-Wall -Werror -O0 -fPIC")
ELSE (${CMAKE_BUILD_TYPE} MATCHES "Debug")
	SET(CMAKE_C_FLAGS "-Wall -Werror -O2 -fPIC")
ENDIF (${CMAKE_BUILD_TYPE} MATCHES "Debug")

add_subdirectory(src)
